Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0 RC 1
-
None
-
installer rc1 363
can reproduce on all platforms
Description
STEPS:
1. Install qt-linux-opensource-5.0.0-rc1-x86_64-offline-2012-12-03-362.run on Ubuntu 12.04 64 bit.
2. Run ~/Qt5.0.0-rc1/5.0.0-rc1/gcc_64/examples/qtsvg/embedded/fluidlauncher/fluidlauncher
ACTUAL RESULT:
#######
ERROR: Unable to open config file "config.xml"
#######
EXPECTED RESULT:
- No error message.
- The example is executed.
Attachments
Issue Links
- relates to
-
QTBUG-41253 Issues Related to Qt Examples (meta bug)
-
- Closed
-
-
QTBUG-28421 Not all examples are shadow build compatible
-
- Closed
-