Fix shadow build behavior of fluidlauncher example

All files are embedded into a qrc file.
The image lookup first assumes that local dirs are used. If nothing is
found the lookup moves to the qrc file. This enables flexibility whereby
the app can still be customized after having been built.

Task-number: QTBUG-28377
Change-Id: I99371ecce08a45321e475a7c32d5b368716bdb18
Reviewed-by: Alessandro Portale <alessandro.portale@digia.com>